[gd_scene load_steps=6 format=2]

[ext_resource path="res://menus/createHero.gd" type="Script" id=1]
[ext_resource path="res://tiles/menus_tiles.tres" type="TileSet" id=2]
[ext_resource path="res://confirm_rename_dialog.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/styles/theme_main.tres" type="Theme" id=4]
[ext_resource path="res://createHero_classButtonGroup.tres" type="ButtonGroup" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 27, 0, 5, 27, 0, 10, 27, 0, 15, 27, 0, 262144, 27, 0, 262149, 27, 0, 262154, 27, 0, 262159, 27, 0, 524288, 27, 0, 524293, 27, 0, 524298, 27, 0, 524303, 27, 0, 786432, 27, 0, 786437, 27, 0, 786442, 27, 0, 786447, 27, 0, 1048576, 27, 0, 1048581, 27, 0, 1048586, 27, 0, 1048591, 27, 0, 1310720, 27, 0, 1310725, 27, 0, 1310730, 27, 0, 1310735, 27, 0, 1572864, 27, 0, 1572869, 27, 0, 1572874, 27, 0, 1572879, 27, 0, 1835008, 27, 0, 1835013, 27, 0, 1835018, 27, 0, 1835023, 27, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="confirm_rename_dialog" parent="." instance=ExtResource( 3 )]
margin_left = 98.0
margin_top = 48.0
margin_right = 448.0
margin_bottom = 216.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 542.0
margin_bottom = 520.0
rect_min_size = Vector2( 540, 0 )
theme = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 542.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "CREATE HERO"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 44.0
margin_right = 542.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 120 )

[node name="container_spacer" type="Container" parent="VBoxContainer/HBoxContainer2"]
margin_right = 420.0
margin_bottom = 120.0
rect_min_size = Vector2( 420, 120 )

[node name="vbox_right" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 424.0
margin_right = 542.0
margin_bottom = 120.0

[node name="button_rename" type="Button" parent="VBoxContainer/HBoxContainer2/vbox_right"]
margin_right = 118.0
margin_bottom = 38.0
text = "Enter Name"

[node name="button_randomName" type="Button" parent="VBoxContainer/HBoxContainer2/vbox_right"]
margin_top = 42.0
margin_right = 118.0
margin_bottom = 80.0
text = "Random Name"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 168.0
margin_right = 542.0
margin_bottom = 206.0
alignment = 1

[node name="button_prevHead" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 177.0
margin_right = 270.0
margin_bottom = 38.0
text = "Prev. Head"

[node name="button_nextHead" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 274.0
margin_right = 365.0
margin_bottom = 38.0
text = "Next Head"

[node name="label_class" type="Label" parent="VBoxContainer"]
margin_top = 210.0
margin_right = 542.0
margin_bottom = 224.0
text = "CLASS"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 228.0
margin_right = 542.0
margin_bottom = 266.0
custom_constants/separation = 12
alignment = 1

[node name="button_cleric" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 47.0
margin_right = 107.0
margin_bottom = 38.0
group = ExtResource( 5 )
text = "Cleric"

[node name="button_druid" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 119.0
margin_right = 178.0
margin_bottom = 38.0
group = ExtResource( 5 )
text = "Druid"

[node name="button_ranger" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 190.0
margin_right = 257.0
margin_bottom = 38.0
group = ExtResource( 5 )
text = "Ranger"

[node name="button_rogue" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 269.0
margin_right = 332.0
margin_bottom = 38.0
group = ExtResource( 5 )
text = "Rogue"

[node name="button_warrior" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 344.0
margin_right = 415.0
margin_bottom = 38.0
group = ExtResource( 5 )
text = "Warrior"

[node name="button_wizard" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 427.0
margin_right = 495.0
margin_bottom = 38.0
group = ExtResource( 5 )
text = "Wizard"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 270.0
margin_right = 542.0
margin_bottom = 400.0

[node name="field_classDescription" type="RichTextLabel" parent="VBoxContainer/CenterContainer"]
margin_left = 61.0
margin_right = 481.0
margin_bottom = 130.0
rect_min_size = Vector2( 420, 130 )
text = "#CLASS ROLE"
scroll_active = false

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 404.0
margin_right = 542.0
margin_bottom = 442.0

[node name="button_createHero" type="Button" parent="VBoxContainer/CenterContainer2"]
margin_left = 220.0
margin_right = 322.0
margin_bottom = 38.0
text = "Create hero!"

[node name="label_nameDupe" type="Label" parent="VBoxContainer"]
margin_top = 446.0
margin_right = 542.0
margin_bottom = 460.0
text = "Error: Someone else has this name!"
align = 1

[node name="label_nameTooShort" type="Label" parent="VBoxContainer"]
margin_top = 464.0
margin_right = 542.0
margin_bottom = 478.0
text = "Error: Name must be at least 2 letters long."
align = 1
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/vbox_right/button_rename" to="." method="_on_button_rename_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/vbox_right/button_randomName" to="." method="_on_button_randomName_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/button_prevHead" to="." method="_on_button_prevHead_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/button_nextHead" to="." method="_on_button_nextHead_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/button_cleric" to="." method="_on_button_cleric_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/button_druid" to="." method="_on_button_druid_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/button_ranger" to="." method="_on_button_ranger_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/button_rogue" to="." method="_on_button_rogue_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/button_warrior" to="." method="_on_button_warrior_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/button_wizard" to="." method="_on_button_wizard_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/button_createHero" to="." method="_on_button_createHero_pressed"]
